@@ -14,6 +14,7 @@
 <li><a href="hangman">Hangman</a>
 <li><a href="border">Border</a>
 <li><a href="survey">Survey</a>
+<li><a href="locale">Locale</a>
 </ul>
 
 </body>
