@@ -1,0 +1,7 @@
+<jwc id="border">
+
+Congratulations, you've changed the locale to <jwc id="insertLocaleName"/>.
+
+<p>You may <jwc id="home">select another</jwc>.
+
+</jwc>
