@@ -1,0 +1,8 @@
+<jwc id="border">
+
+
+Gl&#252;ckw&#252;nsche, haben Sie ge&#228;ndert das locale zu <jwc id="insertLocaleName"/>.
+
+<p>Sie k&#246;nnen <jwc id="home">w&#228;hlen Sie anders aus</jwc>.
+
+</jwc>
