@@ -1,0 +1,7 @@
+<jwc id="border">
+
+Des f&#233;licitations, vous avez chang&#233; le locale en <jwc id="insertLocaleName"/>.
+
+<p>Vous pouvez <jwc id="home">choisissez autre</jwc>.
+
+</jwc>
