@@ -1,0 +1,7 @@
+<jwc id="border">
+
+Congratulazioni, avete cambiato il locale a <jwc id="insertLocaleName"/>.
+
+<p>Potete <jwc id="home">selezionare un altro</jwc>.
+
+</jwc>
