@@ -1,0 +1,14 @@
+<jwc id="border">
+
+Cette d&#233;monstration d'instruction comment changer
+dynamiquement le locale pour l'application courante.
+
+<p>
+Choisissez un nouveau locale:
+
+<jwc id="form">
+<jwc id="inputLocale"/>
+<input type=submit value="Changement!">
+</jwc>
+
+</jwc>
