@@ -28,6 +28,10 @@
 		<servlet-name>hangman</servlet-name>
 		<servlet-class>tutorial.hangman.HangmanServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>locale</servlet-name>
+		<servlet-class>tutorial.locale.LocaleServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>hello</servlet-name>
 		<url-pattern>/hello/*</url-pattern>
@@ -51,6 +55,10 @@
 	<servlet-mapping>
 		<servlet-name>hangman</servlet-name>
 		<url-pattern>/hangman/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>locale</servlet-name>
+		<url-pattern>/locale/*</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
