@@ -1,5 +1,9 @@
 * Jan 2 2001 hship
 
+Add a tutorial to demonstration dynamically changing the locale.
+
+* Jan 2 2001 hship
+
 Minor corrections to some tutorial code.
 
 * Dec 29 2000 hship
